--- a/main.html
+++ b/main.html
@@ -11,11 +11,9 @@
 
     <nav>
 		<ul>
-		   <li><a href="https://course.acciojob.com/open-web-editor?question=5996f997-e577-4a36-8ead-a0aeff480821">Home</li>
-		   </a>
-			<li><a href="https://course.acciojob.com/web-idle?question=5996f997-e577-4a36-8ead-a0aeff480821">About us</li></a>
-			<li><a href="https://course.acciojob.com/modules">Contact us</li>
-		
+		  <li><a href="index.html">Home</a></li>
+	        <li><a href="/about/">About us</a></li>
+	        <li><a href="/blog/">Contact us</a></li>
 		</ul>
 	</nav>
 		<h1>3 random audios</h1>
